Production/01-02-2025/force-app/main/default/objects/Segment_Mapping__c/fields/isCreatedFromException__c.field-meta.xml
<CustomField>
    <fullName>isCreatedFromException__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCreatedFromException</label>
    <type>Checkbox</type>
</CustomField>