Production/01-02-2025/force-app/main/default/objects/Segment_Mapping__c/fields/Segment_Category_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Segment_Category_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Segment Category Mapping</label>
    <referenceTo>Segment_Category_Mapping__c</referenceTo>
    <relationshipName>Segment_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>