Production/01-02-2025/force-app/main/default/objects/Segment_Mapping__c/fields/Segment_Name_Sales_Raw__c.field-meta.xml
<CustomField>
    <fullName>Segment_Name_Sales_Raw__c</fullName>
    <externalId>true</externalId>
    <label>Segment Name (Sales) Raw</label>
    <length>255</length>
    <type>Text</type>
</CustomField>