Production/01-02-2025/force-app/main/default/objects/Segment_Mapping__c/fields/Segment_Name_Sales_Raw_For_Admin__c.field-meta.xml
<CustomField>
    <fullName>Segment_Name_Sales_Raw_For_Admin__c</fullName>
    <formula>UPPER( Segment_Name_Sales_Raw__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment Name (Sales) Raw - For Admin</label>
    <type>Text</type>
</CustomField>