Production/01-02-2025/force-app/main/default/objects/Segment_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Segment_Name_Sales_Raw__c</columns>
    <columns>Segment_Name_Supply_Raw__c</columns>
    <columns>Segment_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>